[package]
name = "csq"
description = "csq is a library for extracting the thermal data from FLIR csq thermal video files."
version = "0.1.0"
authors = ["Alexander Hörl <mail@alexanderhoerl.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csq"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
kamadak-exif = "0.5.5"
lazy_static = "1.5.0"
ndarray = { version = "0.15.6" }
pcre2 = "0.2.7"
peck-exif = "1.0.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"

[workspace]
members = ["examples/csq-to-video"]
dependencies = { anyhow = { version = "1.0.86" }, ndarray = { version =  "0.15.6" }, serde_json = "1.0.117"}
