[package]
name = "csq-to-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csq = { path = "../../" }

anyhow = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
ndarray = { workspace = true, features = ["serde"] }
image = "0.25.1"
colorgrad = "0.6.2"
serde_json = { workspace = true }
opencv = { version = "0.92.0", features = ["clang-runtime"] }
